login e logout com botoes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,5 +19,11 @@
 
   <body>
     <%= yield %>
+
+    <% if flash[:alert] %>
+      <script>
+        alert("<%= j flash[:alert] %>");
+      </script>
+    <% end %>
   </body>
 </html>
