--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -12,26 +12,31 @@
 
   <% if current_page?(root_path) %>
     <button id="change-theme">Trocar tema</button>
+    <%= button_to "Login como Cliente", :login_cliente, method: :post %>
+    <%= button_to "Login como Admin", :login_admin, method: :post %>
+    <%= button_to "Logout", :logout, method: :post %>
   <% end %>
 </header>
 
 <script>
-  const html = document.documentElement;
+  const html = document.documentElement
 
-  const theme = localStorage.getItem("data-theme");
+  const theme = localStorage.getItem("data-theme")
   if(theme) {
     html.setAttribute("data-theme", theme)
   }
 
-  const button = document.getElementById("change-theme");
-  button.addEventListener("click", () => {
-    const theme = html.getAttribute("data-theme");
-    if (theme == "dark") {
-      html.setAttribute("data-theme", "light");
-      localStorage.setItem("data-theme", "light")
-    } else {
-      html.setAttribute("data-theme", "dark");
-      localStorage.setItem("data-theme", "dark")
-    }
-  });
+  const button = document.getElementById("change-theme")
+  if (button) {
+    button.addEventListener("click", () => {
+      const theme = html.getAttribute("data-theme")
+      if (theme == "dark") {
+        html.setAttribute("data-theme", "light")
+        localStorage.setItem("data-theme", "light")
+      } else {
+        html.setAttribute("data-theme", "dark")
+        localStorage.setItem("data-theme", "dark")
+      }
+    })
+  }
 </script>
