--- a/app/views/home/_carrinho_item.html.erb
+++ b/app/views/home/_carrinho_item.html.erb
@@ -2,13 +2,12 @@
   <% if carrinho_item.produto.imagens.attached? %>
     <section>
       <div>
-        <% carrinho_item.produto.imagens.each do |imagem| %>
-          <figure>
-            <%= image_tag imagem,
-            width: 150,
-            alt: "Imagem do produto #{carrinho_item.produto.nome}" %>
-          </figure>
-        <% end %>
+        <% imagem = carrinho_item.produto.imagens.first %>
+        <figure>
+          <%= image_tag imagem,
+          width: 150,
+          alt: "Imagem do produto #{carrinho_item.produto.nome}" %>
+        </figure>
       </div>
     </section>
   <% else %>
@@ -26,8 +25,7 @@
       <%= format_preco(carrinho_item.produto.preco) %></dd>
 
     <dt>Quantidade:</dt>
-    <dd><%= carrinho_item.quantidade %>
-      unidades</dd>
+    <dd><%= carrinho_item.quantidade %> <%= "unidade".pluralize(carrinho_item.quantidade) %></dd>
 
     <dt>Subtotal:</dt>
     <dd>R$
