--- a/app/views/home/_carrinho_item.html.erb
+++ b/app/views/home/_carrinho_item.html.erb
@@ -25,7 +25,8 @@
       <%= format_preco(carrinho_item.produto.preco) %></dd>
 
     <dt>Quantidade:</dt>
-    <dd><%= carrinho_item.quantidade %> <%= "unidade".pluralize(carrinho_item.quantidade) %></dd>
+    <dd><%= carrinho_item.quantidade %>
+      <%= "unidade".pluralize(carrinho_item.quantidade) %></dd>
 
     <dt>Subtotal:</dt>
     <dd>R$
