--- a/app/views/carrinho/index.html.erb
+++ b/app/views/carrinho/index.html.erb
@@ -1,4 +1,4 @@
-<%= render "header" %>
+<%= render "home/header" %>
 
 <main>
   <% carrinho.itens.each  do |carrinho_item| %>
@@ -18,4 +18,4 @@
   <% end %>
 </main>
 
-<%= render "footer" %>
+<%= render "home/footer" %>
