--- a/app/views/carrinho/index.html.erb
+++ b/app/views/carrinho/index.html.erb
@@ -1,21 +1,29 @@
 <%= render "home/header" %>
 
-<main>
-  <% carrinho.itens.each  do |carrinho_item| %>
-    <%= render "carrinho_item", carrinho_item: %>
-  <% end %>
+<main class="container">
+  <section>
+    <div class="grid">
+      <% carrinho.itens.each  do |carrinho_item| %>
+        <%= render "carrinho_item", carrinho_item: %>
+      <% end %>
+    </div>
 
-  <% if carrinho.itens.any? %>
-    <% total_preco = carrinho.itens.sum { it.produto.preco * it.quantidade } %>
-    <p><strong>Total:
-      </strong>
-      R$
-      <%= format_preco(total_preco) %></p>
+    <% if carrinho.itens.any? %>
+      <% total_preco = carrinho.itens.sum { it.produto.preco * it.quantidade } %>
+      <p><strong>Total:
+        </strong>
+        R$
+        <%= format_preco(total_preco) %></p>
 
-    <%= button_to "Limpar carrinho", :clean_carrinho, method: :delete %>
-  <% else %>
-    <p>Seu carrinho está vazio.</p>
-  <% end %>
+      <button
+        data-controller="carrinho"
+        data-action="click->carrinho#clean_carrinho"
+        data-url="<%= url_for :clean_carrinho %>"
+      >Limpar carrinho</button>
+    <% else %>
+      <p>Seu carrinho está vazio.</p>
+    <% end %>
+  </section>
 </main>
 
 <%= render "home/footer" %>
