--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,6 +1,9 @@
 <header class="container">
   <h1>Mercado Online</h1>
-  <nav>
+
+  <nav class="container-fluid">
+    <div>
+    </div>
     <ul>
       <li><%= link_to "Início", :root %></li>
       <li><%= link_to "Produtos", :produtos %></li>
