--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -11,7 +11,7 @@
       <li><%= link_to "Início", :root %></li>
       <li><%= link_to "Produtos", :produtos %></li>
       <li><%= link_to "Carrinho", :carrinho %></li>
-      <li><%= link_to "Perfil", :minha_conta %></li>
+      <li><%= link_to "Perfil", :perfil %></li>
       <li><%= link_to "Contato", :contato %></li>
     </ul>
   </nav>
