--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -24,7 +24,7 @@
 
   <section class="grid">
     <% produtos.each do |produto| %>
-      <%= render "produto", produto: produto %>
+      <%= render "produto", produto: %>
     <% end %>
     <% if produtos.empty? %>
       <p>Nenhum produto encontrado.</p>
