melhoria visual na aplicação do tema da pagina

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,8 +9,12 @@
  * Consider organizing styles into separate files for maintainability.
  */
 
-.hidden {
+body {
   visibility: hidden;
+}
+
+[data-theme] body {
+  visibility: visible;
 }
 
 .scroll-container {
