--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -17,7 +17,7 @@
   </nav>
 
   <% if current_page?(:root) %>
-    <div class="grid" data-controller="session">
+    <div class="grid" data-controller="theme session">
       <button data-action="click->theme#change_theme">
         Trocar tema
       </button>
