--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,21 @@
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
 
+    <script>
+      const stored_theme = localStorage.getItem("data-theme")
+      if (stored_theme) {
+        document.documentElement.setAttribute("data-theme", stored_theme)
+      } else {
+        const is_dark = window.matchMedia("(prefers-color-scheme: dark)").matches
+        document.documentElement.setAttribute("data-theme", is_dark ? "dark" : "light")
+      }
+    </script>
+
     <%= stylesheet_link_tag :app %>
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="hidden" data-controller="theme">
+  <body>
     <%= yield %>
 
     <% if flash[:alert] %>
