--- a/app/views/carrinho/index.html.erb
+++ b/app/views/carrinho/index.html.erb
@@ -16,12 +16,18 @@
         <%= format_preco(total_preco) %></p>
 
       <button
+        data-controller="compras"
+        data-action="click->compras#create"
+        data-compras-url-value="<%= url_for :create_compra %>"
+      >Comprar</button>
+      <button
         data-controller="carrinho"
         data-action="click->carrinho#clean_carrinho"
         data-carrinho-url-value="<%= url_for :clean_carrinho %>"
       >Limpar carrinho</button>
     <% else %>
-      <p>Seu carrinho está vazio.</p>
+      <p>Carrinho vazio. Que tal explorar nossos produtos e encontrar algo que
+        te agrade? 😊</p>
     <% end %>
   </section>
 </main>
