--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -6,6 +6,7 @@
       <li><%= link_to "Início", :root %></li>
       <li><%= link_to "Produtos", :produtos %></li>
       <li><%= link_to "Carrinho", :carrinho %></li>
+      <li><%= link_to "Compras", :compras %></li>
       <li><%= link_to "Perfil", :perfil %></li>
       <li><%= link_to "Contato", :contato %></li>
     </ul>
