--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -9,12 +9,12 @@
         name="categoria"
         id="categoria"
         value="<%= params[:categoria] %>"
-      />
+      >
     </div>
 
     <div>
       <label for="tags">Tags (separe por vírgula)</label>
-      <input type="text" name="tags" id="tags" value="<%= params[:tags] %>"/>
+      <input type="text" name="tags" id="tags" value="<%= params[:tags] %>">
     </div>
 
     <div>
