--- a/app/views/home/contato.html.erb
+++ b/app/views/home/contato.html.erb
@@ -6,15 +6,15 @@
     <form>
       <p>
         <label for="nome">Nome:</label><br/>
-        <input type="text" id="nome" name="nome" required/>
+        <input type="text" id="nome" name="nome" required>
       </p>
       <p>
         <label for="email">E-mail:</label><br/>
-        <input type="email" id="email" name="email" required/>
+        <input type="email" id="email" name="email" required>
       </p>
       <p>
         <label for="assunto">Assunto:</label><br/>
-        <input type="text" id="assunto" name="assunto" required/>
+        <input type="text" id="assunto" name="assunto" required>
       </p>
       <p>
         <label for="mensagem">Mensagem:</label><br/>
