--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -31,6 +31,13 @@
       </button>
       <button
         data-controller="session"
+        data-action="click->session#login_vendedor"
+        data-session-url-value="<%= url_for :login_vendedor %>"
+      >
+        Login como Vendedor
+      </button>
+      <button
+        data-controller="session"
         data-action="click->session#login_admin"
         data-session-url-value="<%= url_for :login_admin %>"
       >
