--- a/app/views/produtos/_produto.html.erb
+++ b/app/views/produtos/_produto.html.erb
@@ -42,7 +42,7 @@
     </dd>
   </dl>
   <section>
-    <% if current_user.cliente? %>
+    <% if usuario.cliente? %>
       <button
         data-controller="carrinho"
         data-action="click->carrinho#add_to_carrinho"
@@ -54,7 +54,7 @@
       </button>
     <% end %>
 
-    <% if current_user.vendedor? %>
+    <% if usuario.vendedor? %>
       <button onclick="window.location.href='<%= edit_produto_path(produto) %>'">
         Editar Produto
       </button>
