--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -1,26 +1,31 @@
 <main class="container">
   <div class="grid">
-    <button
-      data-controller="session"
-      data-action="click->session#login_cliente"
-      data-session-url-value="<%= url_for :login_cliente %>"
-    >
-      Login como Cliente
-    </button>
-    <button
-      data-controller="session"
-      data-action="click->session#login_vendedor"
-      data-session-url-value="<%= url_for :login_vendedor %>"
-    >
-      Login como Vendedor
-    </button>
-    <button
-      data-controller="session"
-      data-action="click->session#login_admin"
-      data-session-url-value="<%= url_for :login_admin %>"
-    >
-      Login como Admin
-    </button>
+    <form action="<%= url_for :login_cliente %>" method="post">
+      <input
+        type="hidden"
+        name="authenticity_token"
+        value="<%= form_authenticity_token %>"
+      >
+      <button type="submit">Login como Cliente</button>
+    </form>
+
+    <form action="<%= url_for :login_vendedor %>" method="post">
+      <input
+        type="hidden"
+        name="authenticity_token"
+        value="<%= form_authenticity_token %>"
+      >
+      <button type="submit">Login como Vendedor</button>
+    </form>
+
+    <form action="<%= url_for :login_admin %>" method="post">
+      <input
+        type="hidden"
+        name="authenticity_token"
+        value="<%= form_authenticity_token %>"
+      >
+      <button type="submit">Login como Admin</button>
+    </form>
   </div>
 </main>
 
