--- a/app/views/home/contato.html.erb
+++ b/app/views/home/contato.html.erb
@@ -6,19 +6,19 @@
     <form>
       <p>
         <label for="nome">Nome:</label><br/>
-        <input type="text" id="nome" name="nome" required>
+        <input type="text" id="nome" name="nome">
       </p>
       <p>
         <label for="email">E-mail:</label><br/>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email">
       </p>
       <p>
         <label for="assunto">Assunto:</label><br/>
-        <input type="text" id="assunto" name="assunto" required>
+        <input type="text" id="assunto" name="assunto">
       </p>
       <p>
         <label for="mensagem">Mensagem:</label><br/>
-        <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+        <textarea id="mensagem" name="mensagem" rows="5"></textarea>
       </p>
       <p>
         <button type="submit">Enviar</button>
