--- a/app/views/produtos/new.html.erb
+++ b/app/views/produtos/new.html.erb
@@ -27,20 +27,12 @@
 
     <div>
       <label for="produto_preco">Preço (em centavos):</label>
-      <input
-        type="number"
-        id="produto_preco"
-        name="produto[preco]"
-      >
+      <input type="number" id="produto_preco" name="produto[preco]">
     </div>
 
     <div>
       <label for="produto_estoque">Estoque:</label>
-      <input
-        type="number"
-        id="produto_estoque"
-        name="produto[estoque]"
-      >
+      <input type="number" id="produto_estoque" name="produto[estoque]">
     </div>
 
     <div>
