--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,57 +18,36 @@
       <h3>2. Carrinho e Finalização de Compra</h3>
       <ul>
         <li>Adição e remoção de produtos do carrinho.</li>
-        <li>Cálculo automático de frete e impostos.</li>
         <li>Checkout simples e responsivo.</li>
       </ul>
     </article>
 
     <article>
-      <h3>3. Pagamentos</h3>
-      <ul>
-        <li>Integração com gateways de pagamento (PagSeguro, Mercado Pago,
-          Stripe, PayPal).</li>
-        <li>Aceitar as principais bandeiras (Visa, MasterCard, Elo, etc).</li>
-        <li>Suporte a PIX com QR Code e chave aleatória.</li>
-      </ul>
-    </article>
-
-    <article>
-      <h3>4. Gestão de Pedidos e Clientes</h3>
+      <h3>3. Gestão de Pedidos e Clientes</h3>
       <ul>
         <li>Painel administrativo intuitivo para acompanhamento de pedidos.</li>
-        <li>Notificações automáticas por e-mail.</li>
         <li>Área do cliente para histórico de compras.</li>
       </ul>
     </article>
 
     <article>
-      <h3>5. Distribuição dos Itens Vendidos</h3>
-      <ul>
-        <li>Integração com serviços de envio (Correios, transportadoras).</li>
-        <li>Opção de retirada no local.</li>
-        <li>Entrega automática para e-books por link ou área restrita.</li>
-      </ul>
-    </article>
-
-    <article>
-      <h3>6. Facilidade de Gerência</h3>
+      <h3>4. Facilidade de Gerência</h3>
       <ul>
         <li>Painel amigável com menus claros.</li>
       </ul>
     </article>
 
     <article>
-      <h3>7. Segurança e Confiabilidade</h3>
+      <h3>5. Segurança e Confiabilidade</h3>
       <ul>
-        <li>Controle de acesso por perfis (admin, editor, vendedor).</li>
+        <li>Controle de acesso por perfis (admin, vendedor, cliente).</li>
         <li>Registro de logs de atividade.</li>
       </ul>
     </article>
   </section>
 
   <article>
-    <h3>8. Escalabilidade</h3>
+    <h3>6. Escalabilidade</h3>
     <ul>
       <li>Suporte a novos produtos e categorias sem necessidade de programação.</li>
     </ul>
