--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -48,7 +48,8 @@
   <article>
     <h3>6. Escalabilidade</h3>
     <ul>
-      <li>Suporte a novos produtos, categorias e tags sem necessidade de programação.</li>
+      <li>Suporte a novos produtos, categorias e tags sem necessidade de
+        programação.</li>
     </ul>
   </article>
 </main>
