refact: desacopla calculo do preco_total

--- a/app/views/carrinho/_carrinho_item.html.erb
+++ b/app/views/carrinho/_carrinho_item.html.erb
@@ -28,6 +28,6 @@
 
     <dt>Subtotal:</dt>
     <dd>R$
-      <%= format_preco(carrinho_item.produto.preco * carrinho_item.quantidade) %></dd>
+      <%= format_preco(carrinho_item.preco_total) %></dd>
   </dl>
 </article>
