--- a/app/views/produtos/_produto.html.erb
+++ b/app/views/produtos/_produto.html.erb
@@ -49,9 +49,9 @@
         data-strong-produto-id-value="<%= produto.id %>"
         data-strong-quantidade-value="1"
         data-strong-fields-value='["produtoId", "quantidade"]'
-        data-strong-url-value="<%= url_for :add_to_carrinho %>"
+        data-strong-url-value="<%= add_to_carrinho_path %>"
       >
-        Adicionar ao carrinho
+        Adicionar
       </button>
     <% end %>
 
