--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -28,7 +28,7 @@
       <button data-controller="theme" data-action="click->theme#change_theme">
         Trocar tema
       </button>
-      <form action="<%= url_for :logout %>" method="post">
+      <form action="<%= logout_path %>" method="post">
         <input
           type="hidden"
           name="authenticity_token"
