--- a/app/views/produtos/new.html.erb
+++ b/app/views/produtos/new.html.erb
@@ -2,7 +2,7 @@
 
 <main class="container">
   <form
-    action="<%= url_for :create_produto %>"
+    action="<%= create_produto_path %>"
     method="post"
     data-controller="form"
     enctype="multipart/form-data"
