--- a/app/views/produtos/_produto.html.erb
+++ b/app/views/produtos/_produto.html.erb
@@ -57,7 +57,7 @@
 
     <% if usuario.vendedor? %>
       <button onclick="window.location.href='<%= edit_produto_path(produto) %>'">
-        Editar Produto
+        Editar
       </button>
     <% end %>
   </section>
